--- a/hybridq/modules/hybridq_options/tutorials/options.ipynb
+++ b/hybridq/modules/hybridq_options/tutorials/options.ipynb
@@ -207,6 +207,24 @@
     ">             c = mpYEYWUqpLsLvfndxIXF\n",
     ">             d = HGikXVBASaGCSlGYvaxQ\n",
     "```\n",
+    "Default values can also be overridden using environment variables:\n",
+    "```\n",
+    "from os import environ\n",
+    "\n",
+    "opts = Options(x=1)\n",
+    "\n",
+    "\n",
+    "@parse_default(opts, env_prefix='PREFIX')\n",
+    "def a(x=Default):\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "environ.pop('PREFIX_X', None)\n",
+    "assert (a() == 1)\n",
+    "\n",
+    "%env PREFIX_X 42\n",
+    "assert (a() == '42')\n",
+    "```\n",
     "\n",
     "## How To Cite\n",
     "\n",
@@ -237,8 +255,8 @@
    "id": "7c051f5c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:20.820160Z",
-     "start_time": "2023-01-13T03:09:20.470658Z"
+     "end_time": "2023-01-26T19:16:40.611455Z",
+     "start_time": "2023-01-26T19:16:40.280075Z"
     }
    },
    "outputs": [
@@ -275,8 +293,8 @@
    "id": "325e5f2d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:20.829863Z",
-     "start_time": "2023-01-13T03:09:20.825593Z"
+     "end_time": "2023-01-26T19:16:40.617829Z",
+     "start_time": "2023-01-26T19:16:40.613399Z"
     }
    },
    "outputs": [
@@ -301,8 +319,8 @@
    "id": "a69c4dd9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:20.842526Z",
-     "start_time": "2023-01-13T03:09:20.833775Z"
+     "end_time": "2023-01-26T19:16:40.629454Z",
+     "start_time": "2023-01-26T19:16:40.621393Z"
     }
    },
    "outputs": [
@@ -327,8 +345,8 @@
    "id": "53a8ec4b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:20.848711Z",
-     "start_time": "2023-01-13T03:09:20.844767Z"
+     "end_time": "2023-01-26T19:16:40.634307Z",
+     "start_time": "2023-01-26T19:16:40.631254Z"
     }
    },
    "outputs": [],
@@ -344,8 +362,8 @@
    "id": "dea0a4be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:20.855213Z",
-     "start_time": "2023-01-13T03:09:20.851000Z"
+     "end_time": "2023-01-26T19:16:40.641029Z",
+     "start_time": "2023-01-26T19:16:40.636395Z"
     }
    },
    "outputs": [
@@ -371,8 +389,8 @@
    "id": "c740bce5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:20.862652Z",
-     "start_time": "2023-01-13T03:09:20.857383Z"
+     "end_time": "2023-01-26T19:16:40.648372Z",
+     "start_time": "2023-01-26T19:16:40.643390Z"
     }
    },
    "outputs": [
@@ -411,8 +429,8 @@
    "id": "647cf177",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:20.868866Z",
-     "start_time": "2023-01-13T03:09:20.865177Z"
+     "end_time": "2023-01-26T19:16:40.653883Z",
+     "start_time": "2023-01-26T19:16:40.650361Z"
     }
    },
    "outputs": [
@@ -438,8 +456,8 @@
    "id": "0c4e6ec5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:20.886533Z",
-     "start_time": "2023-01-13T03:09:20.871250Z"
+     "end_time": "2023-01-26T19:16:40.672165Z",
+     "start_time": "2023-01-26T19:16:40.655655Z"
     }
    },
    "outputs": [
@@ -993,8 +1011,8 @@
    "id": "941e6d83",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:21.008484Z",
-     "start_time": "2023-01-13T03:09:20.889131Z"
+     "end_time": "2023-01-26T19:16:40.782210Z",
+     "start_time": "2023-01-26T19:16:40.674826Z"
     }
    },
    "outputs": [
@@ -1054,8 +1072,8 @@
    "id": "87ab0c3c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:21.013511Z",
-     "start_time": "2023-01-13T03:09:21.010229Z"
+     "end_time": "2023-01-26T19:16:40.787368Z",
+     "start_time": "2023-01-26T19:16:40.784213Z"
     }
    },
    "outputs": [
@@ -1084,8 +1102,8 @@
    "id": "1e28df8d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:21.018949Z",
-     "start_time": "2023-01-13T03:09:21.015622Z"
+     "end_time": "2023-01-26T19:16:40.792583Z",
+     "start_time": "2023-01-26T19:16:40.789403Z"
     }
    },
    "outputs": [
@@ -1111,8 +1129,8 @@
    "id": "1d57342d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:21.028309Z",
-     "start_time": "2023-01-13T03:09:21.025133Z"
+     "end_time": "2023-01-26T19:16:40.801819Z",
+     "start_time": "2023-01-26T19:16:40.798534Z"
     }
    },
    "outputs": [
@@ -1140,8 +1158,8 @@
    "id": "645cf7b7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-13T03:09:21.039594Z",
-     "start_time": "2023-01-13T03:09:21.031078Z"
+     "end_time": "2023-01-26T19:16:40.812016Z",
+     "start_time": "2023-01-26T19:16:40.804216Z"
     }
    },
    "outputs": [
@@ -1155,10 +1173,10 @@
       "        Docstring for function `f`.\n",
       "        \n",
       "    Default values:\n",
-      "            a = qTbQWcyAooMvaCeQdhAJ\n",
-      "            b = SegTCFjUkfFSIbSogSvf\n",
-      "            c = ByRCtjPuTzfDXMpkyZaT\n",
-      "            d = VhnkWOFjUgnVhosugDMJ\n",
+      "            a = ReOrSreWZSbbVJMImxOR\n",
+      "            b = HnxHqPNEcxaaasfCCdVO\n",
+      "            c = RQKcGTIoXLIIkDcZebtK\n",
+      "            d = vxHCPaZIPYraeygxRlIA\n",
       "\n"
      ]
     }
@@ -1203,6 +1221,44 @@
     "\n",
     "# 'parse_default' also preserves the signature and docstring\n",
     "help(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c21b0b27",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-26T19:16:40.828104Z",
+     "start_time": "2023-01-26T19:16:40.814294Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: PREFIX_X=42\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Default values can also be overridden using environment variables\n",
+    "from os import environ\n",
+    "\n",
+    "opts = Options(x=1)\n",
+    "\n",
+    "\n",
+    "@parse_default(opts, env_prefix='PREFIX')\n",
+    "def a(x=Default):\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "environ.pop('PREFIX_X', None)\n",
+    "assert (a() == 1)\n",
+    "\n",
+    "%env PREFIX_X 42\n",
+    "assert (a() == '42')"
    ]
   }
  ],
